# fastapi-mongodb

./: .coveragerc  .flake8  .gitignore  .pylintrc  404.html  LICENSE.MD  Pipfile  README.md  example.env  index.html  local.Dockerfile  local.yml  main.py  manage.py  mkdocs.yml  pyproject.toml  run.py  settings.py  sitemap.xml
.github/workflows/: python-package.yml
apps/common/: bases.py  config.py  db.py  enums.py  exceptions.py  handlers.py  logging.py  middlewares.py  pagination.py  paginations.py  permissions.py  schemas.py  utils.py
apps/common/tests/: test_handlers.py
apps/users/: backends.py  commands.py  config.py  enums.py  handlers.py  models.py  permissions.py  repositories.py  routers.py  schemas.py
apps/users/tests/: factories.py  test_routers.py
bases/: __init__.py  config.py  db.py  exceptions.py  handlers.py  helpers.py  logging.py  models.py  pagination.py  permissions.py  projectors.py  repositories.py  schemas.py  sorting.py  utils.py
bases/tests/: test_db.py  test_exceptions.py  test_helpers.py  test_logging.py  test_models.py  test_pagination.py  test_projectors.py  test_repositories.py  test_sorting.py  test_types.py
common/badges/: index.html
common/dependencies/: index.html
common/install001/: index.html
common/install002/: index.html
docs/: index.md  index.ru.md  managers.md  setup.md  setup.ru.md
docs/common/: badges.md  dependencies.md  dependencies.ru.md  install001.md  install002.md
docs_src/: setup001.py
docs_src/managers/: passwords001.py  passwords002.py  tokens001.py  tokens002.py
en/: index.html
en/common/badges/: index.html
en/common/dependencies/: index.html
en/common/install001/: index.html
en/common/install002/: index.html
en/managers/: index.html
en/setup/: index.html
fastapi_mongodb/: __init__.py  config.py  db.py  dependencies.py  exceptions.py  handlers.py  helpers.py  logging.py  managers.py  middlewares.py  models.py  pagination.py  permissions.py  projectors.py  repositories.py  schemas.py  types.py
fastapi_mongodb/tests/: test_db.py  test_exceptions.py  test_helpers.py  test_logging.py  test_models.py  test_pagination.py  test_projectors.py  test_repositories.py  test_sorting.py  test_types.py
managers/: index.html
ru/: index.html
ru/common/badges/: index.html
ru/common/dependencies/: index.html
ru/common/install001/: index.html
ru/common/install002/: index.html
ru/managers/: index.html
ru/setup/: index.html
search/: search_index.json
setup/: index.html
tests/: conftest.py  test_db.py  test_helpers.py  test_logging.py  test_managers.py  test_models.py  test_repositories.py  test_types.py
